init, start setting up mocks and basics

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,17 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer base {
 
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  /* Scrollbar Styles */
+  ::-webkit-scrollbar {
+    @apply w-2
   }
-  body {
-    color: white;
-    background: black;
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-slate-700/50 rounded-full
   }
+
 }
