--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,7 +19,7 @@
   }
 
   input:not([type="submit"]) {
-    @apply p-1 bg-slate-300 placeholder-slate-500 text-slate-800
+    @apply p-1 rounded-sm bg-slate-300 placeholder-slate-500 text-slate-800
   }
 
 }
