--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,16 @@
     @apply bg-slate-700/50 rounded-full
   }
 
+  /* Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
   .base-transition {
     @apply transition-all duration-150
   }
