--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,6 +40,6 @@
 
 @layer utilities {
   .card {
-    @apply border-2 border-slate-700/30 bg-slate-700/30 hover:bg-slate-800 hover:border-slate-700 hover:text-opacity-50 base-transition rounded-lg shadow-sm
+    @apply border-2 border-slate-700/30 bg-slate-700/30 rounded-lg shadow-sm
   }
 }
